k8s-deployment/prod/prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stage
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
